# Microshop

./: README.md  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_17_1915-8eee20d3b1d0_create_products_table.py  2024_07_17_1944-c4a6fd40742a_create_users_table.py  2024_07_17_2005-b8e87354e1f9_create_posts_table.py  2024_07_18_0256-6b82bd60bddc_create_profile_table.py  2024_07_29_2209-f20f3cbba23e_create_orders_table.py  2024_07_30_0119-a99e22f24381_create_order_product_association_table.py  2024_07_31_0033-432b2cfe96a4_add_count_column_to_order_product_.py  2024_07_31_0124-946cf6f83d4a_add_unit_price_column_to_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
