[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["nika-doroshkevich"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standart"], version = "^0.30.1" }
pydantic = {extras = ["email"], version = "^2.8.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
